doc/logfile.txt
Class documentation
<---- javadoc command: ---->
/snap/bluej/227/usr/lib/jvm/java-11-openjdk-amd64/bin/javadoc
-author
-version
-nodeprecated
-package
-Xdoclint:none
-noindex
-notree
-nohelp
-nonavbar
-source
11
-classpath
/snap/bluej/227/usr/share/bluej/bluejcore.jar:/snap/bluej/227/usr/share/bluej/junit-jupiter-5.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-jupiter-api-5.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-jupiter-engine-5.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-jupiter-migrationsupport-5.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-jupiter-params-5.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-platform-commons-1.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-platform-console-1.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-platform-console-standalone-1.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-platform-engine-1.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-platform-launcher-1.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-platform-reporting-1.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-platform-runner-1.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-platform-suite-api-1.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-platform-testkit-1.5.2.jar:/snap/bluej/227/usr/share/bluej/junit-quickcheck-core-0.9.jar:/snap/bluej/227/usr/share/bluej/junit-vintage-engine-5.5.2.jar:/snap/bluej/227/usr/share/bluej/hamcrest-core-1.3.jar:/snap/bluej/227/usr/share/bluej/hamcrest-library-1.3.jar:/snap/bluej/227/usr/share/bluej/lang-stride.jar:/snap/bluej/227/usr/share/java/javafx-base-11.jar:/snap/bluej/227/usr/share/java/javafx-controls-11.jar:/snap/bluej/227/usr/share/java/javafx-fxml-11.jar:/snap/bluej/227/usr/share/java/javafx-graphics-11.jar:/snap/bluej/227/usr/share/java/javafx-media-11.jar:/snap/bluej/227/usr/share/java/javafx-properties-11.jar:/snap/bluej/227/usr/share/java/javafx-swing-11.jar:/snap/bluej/227/usr/share/java/javafx-web-11.jar:/snap/bluej/227/usr/share/bluej/userlib/bluej-junit-ext.jar:/snap/bluej/227/usr/share/bluej/userlib/pi4j-core.jar:/snap/bluej/227/usr/share/bluej/userlib/pi4j-device.jar:/snap/bluej/227/usr/share/bluej/userlib/pi4j-gpio-extension.jar:/snap/bluej/227/usr/share/bluej/userlib/pi4j-service.jar:/home/student/Magpie
-d
/home/student/Magpie/doc
-encoding
UTF-8
-charset
UTF-8
/home/student/Magpie/activity2/Magpie2.java
<---- end of javadoc command ---->
Loading source file /home/student/Magpie/activity2/Magpie2.java...
/home/student/Magpie/activity2/Magpie2.java:71: error: class, interface, or enum expected
    private String getRandomResponse()
            ^
/home/student/Magpie/activity2/Magpie2.java:73: error: class, interface, or enum expected
        final int NUMBER_OF_RESPONSES = 4;
              ^
/home/student/Magpie/activity2/Magpie2.java:74: error: class, interface, or enum expected
        double r = Math.random();
        ^
/home/student/Magpie/activity2/Magpie2.java:75: error: class, interface, or enum expected
        int whichResponse = (int)(r * NUMBER_OF_RESPONSES);
        ^
/home/student/Magpie/activity2/Magpie2.java:76: error: class, interface, or enum expected
        String response = "";
        ^
/home/student/Magpie/activity2/Magpie2.java:78: error: class, interface, or enum expected
        if (whichResponse == 0)
        ^
/home/student/Magpie/activity2/Magpie2.java:81: error: class, interface, or enum expected
        }
        ^
/home/student/Magpie/activity2/Magpie2.java:85: error: class, interface, or enum expected
        }
        ^
/home/student/Magpie/activity2/Magpie2.java:89: error: class, interface, or enum expected
        }
        ^
/home/student/Magpie/activity2/Magpie2.java:93: error: class, interface, or enum expected
        }
        ^
/home/student/Magpie/activity2/Magpie2.java:96: error: class, interface, or enum expected
    }
    ^
11 errors
